--- a/css/Mycss.css
+++ b/css/Mycss.css
@@ -296,13 +296,16 @@
 .bv-ing{
     position: relative;
     height:10px;
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    /*-webkit-border-radius:5px;*/
+    /*-moz-border-radius:5px;*/
+    /*border-radius:5px;*/
     background: #fff;
 }
 .dot{
     position: absolute;
-    right:0;
+    right:-14px;
     top:-4px;
     width:16px;
     height:16px;
@@ -313,7 +316,7 @@
     cursor: pointer;
 }
 /*音量调节*/
-.v-span{
+/* .v-span{
     float: left;
     display: inline-block;
     width:12px;
@@ -321,14 +324,15 @@
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
     background: #fff;
-}
+} */
 .vol{
     width:150px;
 }
 .vol .v-ing{
     /*width:138px;*/
-    width:75px;
-    left:12px;
+    width:61px;
+    /*left:12px;*/
+    left:0;
 }
 .f-right .fr-fontsize{
     font-size:25px;
